@@ -1,3 +1,7 @@
+2013-04-08  Pedro Vicente  <pvicente@uci.edu>
+
+	* gpe_chk() Check valid GPE new name
+  
 2013-04-08  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.3.1 release procedure:
